--- a/back/package.json
+++ b/back/package.json
@@ -8,11 +8,15 @@
   },
   "dependencies": {
     "axios": "^1.9.0",
+    "connect": "^3.7.0",
+    "connect-mongo": "^5.1.0",
     "cors": "^2.8.5",
     "dotenv": "^16.5.0",
     "express": "^4.18.2",
+    "express-session": "^1.18.2",
     "ip": "^2.0.1",
     "mongoose": "^8.14.1",
+    "multer": "^2.0.2",
     "nodemailer": "^6.9.15",
     "socket.io": "^4.8.1"
   }
