--- a/front/package.json
+++ b/front/package.json
@@ -10,37 +10,42 @@
     "web": "expo start --web"
   },
   "dependencies": {
-    "@react-native-async-storage/async-storage": "^2.1.2",
+    "@react-native-async-storage/async-storage": "2.1.2",
+    "@react-native-community/datetimepicker": "8.4.1",
     "@react-navigation/bottom-tabs": "^7.3.11",
     "@react-navigation/native": "^7.1.9",
     "@react-navigation/native-stack": "^7.3.12",
     "@react-navigation/stack": "^7.3.2",
     "axios": "^1.9.0",
-    "expo": "~53.0.5",
-    "expo-checkbox": "^4.1.4",
-    "expo-dev-client": "~5.1.8",
+    "expo": "~53.0.20",
+    "expo-checkbox": "~4.1.4",
     "expo-device": "~7.1.4",
+    "expo-document-picker": "~13.1.6",
+    "expo-file-system": "~18.1.11",
     "expo-image-picker": "~16.1.4",
-    "expo-notifications": "~0.31.2",
+    "expo-linking": "~7.1.7",
+    "expo-notifications": "~0.31.4",
     "expo-status-bar": "~2.2.3",
     "react": "19.0.0",
-    "react-native": "0.79.2",
+    "react-native": "0.79.5",
     "react-native-calendars": "^1.1312.0",
     "react-native-chart-kit": "^6.12.0",
     "react-native-dotenv": "^3.4.11",
     "react-native-dropdown-picker": "^5.4.6",
     "react-native-exit-app": "^2.0.0",
+    "react-native-gesture-handler": "~2.24.0",
+    "react-native-modal-datetime-picker": "^18.0.0",
     "react-native-paper": "^5.14.1",
     "react-native-picker-select": "^9.3.1",
-    "react-native-reanimated": "^3.17.5",
-    "react-native-safe-area-context": "^5.4.0",
-    "react-native-screens": "~4.10.0",
-    "react-native-svg": "^15.11.2",
+    "react-native-reanimated": "~3.17.4",
+    "react-native-safe-area-context": "5.4.0",
+    "react-native-screens": "~4.11.1",
+    "react-native-svg": "^15.13.0",
     "react-native-vector-icons": "^10.2.0",
     "socket.io-client": "^4.8.1"
   },
   "devDependencies": {
-    "@babel/core": "^7.20.0"
+    "@babel/core": "^7.26.0"
   },
   "private": true
 }
