--- a/front/package.json
+++ b/front/package.json
@@ -17,7 +17,7 @@
     "@react-navigation/native-stack": "^7.3.12",
     "@react-navigation/stack": "^7.3.2",
     "axios": "^1.9.0",
-    "expo": "~53.0.20",
+    "expo": "^54.0.7",
     "expo-checkbox": "~4.1.4",
     "expo-device": "~7.1.4",
     "expo-document-picker": "~13.1.6",
@@ -45,7 +45,8 @@
     "socket.io-client": "^4.8.1"
   },
   "devDependencies": {
-    "@babel/core": "^7.26.0"
+    "@babel/core": "^7.26.0",
+    "babel-preset-expo": "^54.0.1"
   },
   "private": true
 }
