--- a/front/package.json
+++ b/front/package.json
@@ -10,13 +10,15 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@expo/vector-icons": "^15.0.2",
     "@react-native-async-storage/async-storage": "2.1.2",
     "@react-native-community/datetimepicker": "8.4.1",
+    "@react-native-community/slider": "5.0.1",
     "@react-navigation/bottom-tabs": "^7.3.11",
     "@react-navigation/native": "^7.1.9",
     "@react-navigation/native-stack": "^7.3.12",
     "@react-navigation/stack": "^7.3.2",
-    "axios": "^1.9.0",
+    "axios": "^1.12.2",
     "expo": "^54.0.7",
     "expo-checkbox": "~4.1.4",
     "expo-device": "~7.1.4",
@@ -24,6 +26,7 @@
     "expo-file-system": "~18.1.11",
     "expo-image-picker": "~16.1.4",
     "expo-linking": "~7.1.7",
+    "expo-location": "~19.0.7",
     "expo-notifications": "~0.31.4",
     "expo-status-bar": "~2.2.3",
     "react": "19.0.0",
@@ -42,6 +45,7 @@
     "react-native-screens": "~4.11.1",
     "react-native-svg": "^15.13.0",
     "react-native-vector-icons": "^10.2.0",
+    "react-native-webview": "13.15.0",
     "socket.io-client": "^4.8.1"
   },
   "devDependencies": {
