--- a/front/package.json
+++ b/front/package.json
@@ -19,6 +19,7 @@
     "@react-navigation/native-stack": "^7.3.12",
     "@react-navigation/stack": "^7.3.2",
     "axios": "^1.12.2",
+    "dayjs": "^1.11.18",
     "expo": "^54.0.7",
     "expo-checkbox": "~4.1.4",
     "expo-device": "~7.1.4",
@@ -45,6 +46,7 @@
     "react-native-screens": "~4.11.1",
     "react-native-svg": "^15.13.0",
     "react-native-vector-icons": "^10.2.0",
+    "react-native-web": "^0.21.1",
     "react-native-webview": "13.15.0",
     "socket.io-client": "^4.8.1"
   },
