--- a/front/package.json
+++ b/front/package.json
@@ -6,8 +6,7 @@
   "scripts": {
     "start": "expo start",
     "android": "expo run:android",
-    "ios": "expo run:ios",
-    "web": "expo start --web"
+    "ios": "expo run:ios"
   },
   "dependencies": {
     "@expo/vector-icons": "^15.0.2",
@@ -46,7 +45,6 @@
     "react-native-screens": "~4.11.1",
     "react-native-svg": "^15.13.0",
     "react-native-vector-icons": "^10.2.0",
-    "react-native-web": "^0.21.1",
     "react-native-webview": "13.15.0",
     "socket.io-client": "^4.8.1"
   },
