--- a/front/package.json
+++ b/front/package.json
@@ -6,47 +6,55 @@
   "scripts": {
     "start": "expo start",
     "android": "expo run:android",
-    "ios": "expo run:ios",
-    "web": "expo start --web"
+    "ios": "expo run:ios"
   },
   "dependencies": {
     "@expo/vector-icons": "^15.0.2",
-    "@react-native-async-storage/async-storage": "2.1.2",
-    "@react-native-community/datetimepicker": "8.4.1",
+    "@react-native-async-storage/async-storage": "2.2.0",
+    "@react-native-community/datetimepicker": "8.4.4",
     "@react-native-community/slider": "5.0.1",
+    "@react-native-picker/picker": "2.11.1",
     "@react-navigation/bottom-tabs": "^7.3.11",
     "@react-navigation/native": "^7.1.9",
     "@react-navigation/native-stack": "^7.3.12",
     "@react-navigation/stack": "^7.3.2",
     "axios": "^1.12.2",
-    "expo": "^54.0.7",
-    "expo-checkbox": "~4.1.4",
-    "expo-device": "~7.1.4",
-    "expo-document-picker": "~13.1.6",
-    "expo-file-system": "~18.1.11",
-    "expo-image-picker": "~16.1.4",
-    "expo-linking": "~7.1.7",
+    "dayjs": "^1.11.18",
+    "expo": "^54.0.21",
+    "expo-checkbox": "~5.0.7",
+    "expo-device": "~8.0.9",
+    "expo-document-picker": "~14.0.7",
+    "expo-file-system": "~19.0.17",
+    "expo-font": "~14.0.9",
+    "expo-image-picker": "~17.0.8",
+    "expo-linking": "~8.0.8",
     "expo-location": "~19.0.7",
-    "expo-notifications": "~0.31.4",
-    "expo-status-bar": "~2.2.3",
-    "react": "19.0.0",
-    "react-native": "0.79.5",
+    "expo-notifications": "~0.32.12",
+    "expo-status-bar": "~3.0.8",
+    "react": "19.1.0",
+    "react-native": "0.81.5",
     "react-native-calendars": "^1.1312.0",
     "react-native-chart-kit": "^6.12.0",
     "react-native-dotenv": "^3.4.11",
     "react-native-dropdown-picker": "^5.4.6",
     "react-native-exit-app": "^2.0.0",
-    "react-native-gesture-handler": "~2.24.0",
+    "react-native-gesture-handler": "~2.28.0",
     "react-native-modal-datetime-picker": "^18.0.0",
     "react-native-paper": "^5.14.1",
     "react-native-picker-select": "^9.3.1",
-    "react-native-reanimated": "~3.17.4",
-    "react-native-safe-area-context": "5.4.0",
-    "react-native-screens": "~4.11.1",
-    "react-native-svg": "^15.13.0",
+    "react-native-reanimated": "~4.1.1",
+    "react-native-safe-area-context": "~5.6.0",
+    "react-native-screens": "~4.16.0",
+    "react-native-svg": "15.12.1",
     "react-native-vector-icons": "^10.2.0",
     "react-native-webview": "13.15.0",
+    "react-native-worklets": "0.5.1",
     "socket.io-client": "^4.8.1"
+  },
+  "overrides": {
+    "react-native-calendars": {
+      "react-native-safe-area-context": "5.6.2"
+    }
   },
   "devDependencies": {
     "@babel/core": "^7.26.0",
