--- a/front/.env
+++ b/front/.env
@@ -1,2 +1,2 @@
-BACKEND_URL=https://study-with-me-h3q7.onrender.com
+BACKEND_URL=https://studylink-irye.onrender.com
 KAKAO_JS_KEY=8735db830fce16c65a56a48c7907c10c
